<resources>
    <string name="app_name">AL AHSA Afforestation</string>
    <string name="welcome_message">Welcome to Al-Ahsa Afforestation App this app was created to help you make your city more beautiful and healthy</string>
    <string name="continue_to_the_app">Continue to the app</string>
    <string name="Email">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="reset_password">Reset password</string>
    <string name="if_u_forgot_reset_password">if you forgot your password, click here</string>
    <string name="customer">Customer</string>
    <string name="name">Full name</string>
    <string name="retype_password">Retype password</string>
    <string name="phone">Phone</string>
    <string name="check_email_enter_code">Check your Email, then enter verification code</string>
    <string name="Verification_code">Verification code</string>
    <string name="verify">Verify</string>
    <string name="newPassword">New password</string>
    <string name="retype">Retype</string>
    <string name="save">Save</string>
    <string name="search_pharmacies">Search pharmacies</string>
    <string name="menu_profile">My profile</string>
    <string name="menu_products">Products</string>
    <string name="menu_volunteers">Volunteers</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_my_cart">My Cart</string>
    <string name="menu_log_out">Log out</string>
    <string name="ok">OK</string>
    <string name="pharmacist">"Pharmacist : "</string>
    <string name="address">Address : </string>
    <string name="opens_at">"opens at : "</string>
    <string name="closes_at">"closes at : "</string>
    <string name="profile_name">name</string>
    <string name="profile_mobile">Mobile</string>
    <string name="profile_personal">Personal</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="Description">Description</string>
    <string name="planning_date">Planning Date</string>
    <string name="seller_name">Seller name</string>
    <string name="price">Price</string>
    <string name="available_quantity">Available quantity</string>
    <string name="message_seller">Message seller</string>
    <string name="add_product_to_cart">Add product to cart</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="enter_cart_number">Enter cart number</string>
    <string name="publish_date">Publish Date</string>
    <string name="availability">Availability</string>
    <string name="volunteer_phone">Volunteer phone</string>
    <string name="volunterr_address">Volunteer address</string>
    <string name="message_volunteer">Message Volunteer</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="total">"Total   "</string>
    <string name="edit_quantity">Edit quantity</string>
    <string name="confirm_order">Confirm order</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure that you want to delete this item from the cart?</string>
    <string name="confirmation_dialog">Confirmation dialog</string>
    <string name="search_product">Search Product</string>
    <string name="search_volunteer">Search Volunteer</string>
    <string name="place_holder">Placeholder</string>
    <string name="seller_menu_products">My products</string>
    <string name="current_orders">Current orders</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="accept_all_orders">Accept all orders</string>
    <string name="reject_all_orders">Reject all orders</string>
    <string name="add_product">Add New Product</string>
    <string name="company">Company name</string>
    <string name="my_products">My products</string>
    <string name="custumer_name">Customer name</string>
    <string name="add_new_product">Add new Product</string>
    <string name="add">Add</string>
    <string name="quantity2">quantity</string>
    <string name="upload_image">Upload image</string>
    <string name="volunteer">Volunteer</string>
    <string name="seller">Seller</string>
    <string name="address_title">Address</string>
    <string name="typ_of_products">Type of products</string>
    <string name="age">Age</string>
    <string name="select_your_age">Select your age</string>
    <string name="next">Next</string>
    <string name="volunteer_menu_services">My services</string>

    <string-array name="age_range">
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
    </string-array>


    <string-array name="months">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="types_of_products">
        <item>plants</item>
        <item>seeds</item>
        <item>trees</item>
        <item>vegetables</item>
        <item>fruits</item>
    </string-array>

    <string-array name="plants_categories">
        <item>Peach</item>
        <item>Grape</item>
        <item>Corn</item>
        <item>Blueberry</item>
        <item>Apple</item>
    </string-array>


    <string-array name="price_range">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
    </string-array>

    <string-array name="quantity_range">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
    </string-array>

    <string name="accept_all_requests">Accept All Requests</string>
    <string name="reject_all_requests">Reject All Requests</string>
    <string name="customers_requests">Customers Requests</string>
    <string name="service_info">Service info</string>
    <string name="service_details">Service details</string>
    <string name="volunteer_name">Volunteer name</string>
    <string name="customer_name">Customer name</string>
    <string name="my_services">My services</string>
    <string name="more_info">more info</string>
    <string name="edit_service_description">"edit description : "</string>
    <string name="add_new_service">Add new service</string>
    <string name="career_skills">Career Skills</string>
    <string name="previous_jobs">Previous Jobs</string>
    <string name="product_name">Name</string>
    <string name="planting_date">Planting date</string>
    <string name="category">Category</string>
    <string name="ask_for_service">Ask for service</string>
    <string name="join_service">Ask For Voluntary Service</string>
    <string name="are_you_sure_you_want_this">Are you sure that you want to ask for this service ?</string>
    <string name="set">Set</string>
    <string name="apply">apply</string>
    <string name="search_by">Search by</string>
    <string name="card_number">Card number</string>
    <string name="expiry_date">Expiry date</string>
    <string name="cvv">security code</string>
    <string name="_continue">Continue</string>

</resources>