<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/secondary"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/search_by"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/main_color"/>

    <RadioGroup
        android:id="@+id/rg_chooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/main_color"
            android:text="@string/name"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@android:color/black"
            android:alpha="0.5"/>

        <RadioButton
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/main_color"
            android:text="@string/Description"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@android:color/black"
            android:alpha="0.5"/>
        <RadioButton
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/main_color"
            android:text="@string/address_title"/>
    </RadioGroup>

</LinearLayout>